# sensserv

./: CMakeLists.txt  appthread.cpp  main.cpp  sensorthread.cpp  sensorthread.h  senstelnet.cpp  server.conf
